<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hiulatam.hiu.hiu.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <ImageView
        android:id="@+id/imageViewMenuMask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/very_large_padding"
        android:layout_marginStart="@dimen/very_large_padding"
        android:layout_marginTop="@dimen/extra_large_padding"
        android:src="@drawable/menu_mask"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutProfileDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/large_padding"
        android:layout_marginStart="@dimen/large_padding"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewMenuMask"
        app:layout_constraintLeft_toRightOf="@+id/imageViewMenuMask"
        app:layout_constraintTop_toTopOf="@+id/imageViewMenuMask">

        <com.an.customfontview.CustomTextView
            android:id="@+id/customTextViewProfileName"
            style="@style/largeFont.black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_name" />

        <com.an.customfontview.CustomTextView
            android:id="@+id/customTextViewProfileDetail"
            style="@style/smallFont.colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile" />

        <com.an.customfontview.CustomTextView
            android:id="@+id/customTextViewEdit"
            style="@style/verySmallFont.gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit" />

    </LinearLayout>

    <com.an.customfontview.CustomEditText
        android:id="@+id/customEditTextSearchSettings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/menu_search_settings_bg"
        android:hint="@string/search_settings"
        android:paddingLeft="@dimen/regular_padding"
        android:paddingRight="@dimen/regular_padding"
        android:drawablePadding="@dimen/regular_padding"
        android:drawableRight="@drawable/icon_search"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMenuMask"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/large_padding"
        android:layout_marginLeft="@dimen/large_padding"
        android:layout_marginRight="@dimen/large_padding"
        android:visibility="gone"
        android:layout_marginStart="@dimen/large_padding"
        android:layout_marginEnd="@dimen/large_padding" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewSettings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/customEditTextSearchSettings"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/frameLayoutRecentRequests"
        android:layout_marginTop="@dimen/large_padding">

    </android.support.v7.widget.RecyclerView>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/frameLayoutRecentRequests"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone">
        <include
            layout="@layout/content_recent_requests"/>
    </FrameLayout>






</android.support.constraint.ConstraintLayout>